After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 708208 - Mjpeg couldn't be played using IVI-Camera-01
Mjpeg couldn't be played using IVI-Camera-01
Status: RESOLVED FIXED
Product: gstreamer-vaapi
Classification: Other
Component: general
git master
Other Linux
: Normal normal
: ---
Assigned To: gstreamer-vaapi maintainer(s)
gstreamer-vaapi maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2013-09-17 07:54 UTC by jun.feng.xu
Modified: 2013-09-20 16:36 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix the bug of missing consideration of GST_JPEG_MARKER_COM segment (1.19 KB, patch)
2013-09-17 07:54 UTC, jun.feng.xu
none Details | Review

Description jun.feng.xu 2013-09-17 07:54:35 UTC
Created attachment 255076 [details] [review]
Fix the bug of missing consideration of GST_JPEG_MARKER_COM segment

Overview: 
Mjpeg couldn't be played using IVI-Camera-01
==========================================================================================
Steps to Reproduce:
user@user: gst-launch-1.0 v4l2src num-buffers=250 device="/dev/video0" ! image/jpeg,width=1280,height=720,framerate=30/1 ! vaapidecode ! fpsdisplaysink video-sink=vaapisink
libva info: VA-API version 0.34.0
libva info: va_getDriverName() returns 0
libva info: Trying to open /opt/gst_git/lib/dri/i965_drv_video.so
libva info: Found init function __vaDriverInit_0_34
libva info: va_openDriver() returns 0
Setting pipeline to PAUSED ...
Pipeline is live and does not need PREROLL ...
Setting pipeline to PLAYING ...
New clock: GstSystemClock
==========================================================================================
Actual results:
The mjpeg couldn't be played using IVI-Camera-01
==========================================================================================
Expected results:
The mjpeg could be played using IVI-Camera-01
Comment 1 jun.feng.xu 2013-09-17 07:59:36 UTC
GST_JPEG_MARKER_COM segment is not considered in the decode_buffer function in gstvaapidecoder_jpeg.c.
Comment 2 Zhao, Halley 2013-09-17 08:15:54 UTC
the camera model is:
 Logitech Pro C920 (M/N: V-U0028)
Comment 3 Gwenole Beauchesne 2013-09-18 12:45:09 UTC
OK. Thanks, but the JPEG decoder still needs to be migrated to the "new" GstVaapiParser infrastructure. Ideally, the COM segments could be marked as GST_VAAPI_DECODER_UNIT_FLAG_SKIP.
Comment 4 Gwenole Beauchesne 2013-09-20 16:36:19 UTC
Fixed in git master branch. Please re-open if this is still an issue.
Comment 5 Gwenole Beauchesne 2013-09-20 16:36:28 UTC
commit a4aac6b89e70ed2ebb70051b3d5196184dab994a
Author: Junfeng Xu <jun.feng.xu@intel.com>
Date:   Tue Sep 17 14:29:54 2013 +0800

    jpeg: handle comment segments.
    
    Fix decode_buffer() function to gracefully skip comment (COM) segments.
    This fixes decoding of streams generated by certain cameras, e.g. like
    the Logitech Pro C920.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=708208
    
    Signed-off-by: Junfeng Xu <jun.feng.xu@intel.com>